# pocket_chef

./: .env.example  .gitignore  docker-compose.yml  justfile  mcp_server.py  pyproject.toml
app/: agent.py  main.py  settings.py
app/schemas/: schemas.py
data/: Recipes_en.csv
mcp_server/: Dockerfile  mcp_server.py  requirements.txt
