[project]
name = "chef-in-my-pocket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.6",
    "fastmcp>=2.14.5",
    "langchain>=1.2.9",
    "langchain-google-genai>=4.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "pandas>=3.0.0",
    "pydantic-settings>=2.12.0",
]
